[package]
name = "jobcan-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.22", features = ["cookies"] }
anyhow = "1.0.75"
tokio = { version = "1.35.0", features = ["full"] }
scraper = "0.18.1"
clap = { version = "4.4.11", features = ["derive", "env"] }
regex = "1.10.2"
