[package]
name = "jobcan-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "jobcan"
path = "src/main.rs"

[dependencies]
reqwest = { version = "0.11.22", default-features = false, features = [
  "cookies",
  "json",
  "rustls-tls",
] }
anyhow = "1.0.75"
tokio = { version = "1.35.0", features = ["full"] }
scraper = "0.18.1"
clap = { version = "4.4.11", features = ["derive", "env"] }
regex = "1.10.2"
serde = { version = "1.0.193", features = ["derive"] }
openssl = { version = "0.10", features = ["vendored"] }
